Fix bug for isJFreeSVGAvailable() method.